[gd_scene load_steps=19 format=3 uid="uid://ckq03t87uw0pn"]

[ext_resource type="Script" path="res://Entities/hostile/skeleton/skeleton.gd" id="1_cfju3"]
[ext_resource type="Texture2D" uid="uid://bntijvflf0nx2" path="res://Entities/hostile/skeleton/MiniSkeleton.png" id="2_a3tot"]
[ext_resource type="PackedScene" uid="uid://dktufhxsvv1x1" path="res://Hit_Hurt_Boxes/hurt_box.tscn" id="3_af6u7"]
[ext_resource type="PackedScene" uid="uid://c8fwx00fmg65p" path="res://Hit_Hurt_Boxes/hit_box.tscn" id="4_dotvt"]
[ext_resource type="PackedScene" uid="uid://nace8txxr12o" path="res://Entities/Stats/stats.tscn" id="5_mpeqi"]
[ext_resource type="PackedScene" uid="uid://dp5j8lpuo0pte" path="res://Entities/hostile/ally_detection_zone.tscn" id="6_tm78m"]
[ext_resource type="PackedScene" uid="uid://dqr1ypao736lu" path="res://States/state_machine.tscn" id="7_ve7sg"]
[ext_resource type="Script" path="res://Entities/hostile/skeleton/States/Fight.gd" id="8_awypv"]
[ext_resource type="Script" path="res://Entities/hostile/skeleton/States/Move.gd" id="9_rn0qv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a5e83"]
radius = 2.0
height = 10.0

[sub_resource type="Animation" id="Animation_lc37k"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitBox/CollisionShape2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_lyxkf"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"death_animation_finish"
}]
}

[sub_resource type="Animation" id="Animation_4udsn"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_yfouk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitBox/CollisionShape2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_13ple"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bpjv"]
_data = {
"Attack": SubResource("Animation_lc37k"),
"Death": SubResource("Animation_lyxkf"),
"Idle": SubResource("Animation_4udsn"),
"RESET": SubResource("Animation_yfouk"),
"Run": SubResource("Animation_13ple")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12xw5"]
size = Vector2(13, 15.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_at35t"]
size = Vector2(15.5, 15)

[node name="Skelenton" type="CharacterBody2D"]
z_index = 1
collision_layer = 8
script = ExtResource("1_cfju3")

[node name="AllyDetectionZone" parent="." instance=ExtResource("6_tm78m")]

[node name="Stats" parent="." instance=ExtResource("5_mpeqi")]
speed = 50
attack_speed = 1.0

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -11)
texture = ExtResource("2_a3tot")
hframes = 6
vframes = 6

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_a5e83")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5bpjv")
}

[node name="HurtBox" parent="." instance=ExtResource("3_af6u7")]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2d" parent="HurtBox" index="0"]
position = Vector2(0.5, -3.3125)
shape = SubResource("RectangleShape2D_12xw5")

[node name="SwordHitBox" parent="." instance=ExtResource("4_dotvt")]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2d" parent="SwordHitBox" index="0"]
position = Vector2(7.49999, -3.25001)
rotation = 1.5708
shape = SubResource("RectangleShape2D_at35t")
disabled = true

[node name="NavigationAgent2d" type="NavigationAgent2D" parent="."]
path_max_distance = 30.0
avoidance_enabled = true
radius = 1.0
neighbor_distance = 5.0
max_neighbors = 999

[node name="StateMachine" parent="." instance=ExtResource("7_ve7sg")]

[node name="Fight" type="Node" parent="StateMachine"]
script = ExtResource("8_awypv")

[node name="Timer" type="Timer" parent="StateMachine/Fight"]

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("9_rn0qv")

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Fight" method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="velocity_computed" from="NavigationAgent2d" to="StateMachine/Move" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="StateMachine/Fight/Timer" to="StateMachine/Fight" method="_on_timer_timeout"]

[editable path="HurtBox"]
[editable path="SwordHitBox"]
